[package]
name = "tls-tunnel"
version = "1.1.0"
authors = ["Varphone Wong <varphone@qq.com>"]
edition = "2021"
description = "A secure tunnel for forwarding local services over TLS."
repository = "https://github.com/varphone/tls-tunnel"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
futures = "0.3"
h2 = "0.4"
http = "1.0"
ratatui = "0.29"
rcgen = { version = "0.14", default-features = true }
reqwest = { version = "0.12", features = ["json"] }
rustls = "0.23"
rustls-pemfile = "2.0"
rustls-native-certs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
socket2 = "0.6"
tokio = { version = "1.48", features = ["full"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7", features = ["compat", "codec"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yamux = "0.13"
